<resources>
	<string name="app_name">FactokenWallet</string>
	<string name="toast_wallet_reset">Wallet was reset,\nwill take some time to recover</string>
	<string name="wallet_disclaimer_fragment_remind_safety">Use at your own risk. Read the &lt;u&gt;safety notes&lt;/u&gt;.</string>
	<string name="wallet_disclaimer_fragment_remind_backup">You need to &lt;u&gt;back up your wallet&lt;/u&gt;!</string>
	<string name="blockchain_state_progress_hours">%1$s, %2$d hours behind</string>
	<string name="blockchain_state_progress_days">%1$s, %2$d days behind</string>
	<string name="blockchain_state_progress_weeks">%1$s, %2$d weeks behind</string>
	<string name="blockchain_state_progress_months">%1$s, %2$d months behind</string>
	<string name="blockchain_state_progress_downloading">Synchronizing with network</string>
	<string name="blockchain_state_progress_stalled">Synchronization stalled</string>
	<string name="blockchain_state_progress_problem_storage">Synchronizing: Storage problem</string>
	<string name="blockchain_state_progress_problem_network">Synchronizing: Network problem</string>
	<string name="wallet_address_fragment_clipboard_msg">Factoken address copied to clipboard</string>
	<string name="wallet_balance_fragment_too_much">This amount is quite high for carrying in your pocket, please move some to a safer place.</string>
	<string name="wallet_balance_fragment_replaying">Balance is unavailable during replay.</string>
	<string name="exchange_rates_activity_title">Exchange Rates</string>
	<string name="exchange_rates_fragment_empty_text">Could not load exchange rates.</string>
	<string name="exchange_rates_fragment_empty_search">Could not find exchange rate.</string>
	<string name="exchange_rates_fragment_default">(default)</string>
	<string name="exchange_rates_fragment_rate">rate</string>
	<string name="exchange_rates_fragment_balance">balance</string>
	<string name="exchange_rates_fragment_source">Price from %s</string>
	<string name="exchange_rates_options_search">Search exchange rate</string>
	<string name="exchange_rates_context_set_as_default_title">Set as default foreign currency</string>
	<string name="wallet_transactions_fragment_tab_received">Received</string>
	<string name="wallet_transactions_fragment_tab_all">Both</string>
	<string name="wallet_transactions_fragment_tab_sent">Sent</string>
	<string name="wallet_transactions_fragment_empty_text_received">No Factoken received so far.</string>
	<string name="wallet_transactions_fragment_empty_text_sent">No Factoken sent so far.</string>
	<string name="wallet_transactions_row_warning_backup">Congratulations, you received your first payment! Have you already &lt;u&gt;backed up your wallet&lt;/u&gt;, to protect against loss?</string>
	<string name="wallet_transactions_fragment_coinbase">mined</string>
	<string name="wallet_transactions_fragment_internal">internal</string>
	<string name="wallet_options_safety_menu">Safety</string>
	<string name="wallet_options_encrypt_keys_set">Set spending PIN</string>
	<string name="wallet_options_encrypt_keys_change">Change spending PIN</string>
	<string name="wallet_options_safety">Safety notes</string>
	<string name="wallet_options_donate">Tip / Donate</string>
	<string name="wallet_donate_address_label">Donation for Factoken Wallet</string>
	<string name="wallet_low_storage_dialog_title">Internal Device Storage Space Low!</string>
	<string name="wallet_low_storage_dialog_msg">Factoken Wallet uses internal storage for remembering transactions and blocks. If it runs out of space, it will stop working and your Factoken will be at risk!\n\nDo you want to open the Application Manager to uninstall unneeded apps?</string>
	<string name="wallet_low_storage_dialog_button_apps">Manage Apps</string>
	<string name="wallet_timeskew_dialog_title">Check your time settings!</string>
	<string name="wallet_timeskew_dialog_msg">Your device time is off by %d minutes. You probably cannot send or receive Factoken due to this problem.\n\nYou should check and correct your time and timezone settings.</string>
	<string name="wallet_version_dialog_title">A new version is available!</string>
	<string name="wallet_version_dialog_msg">This version fixes important bugs. For details, see the change log on Google Play.</string>
	<string name="wallet_version_dialog_msg_deprecated">If you don\'t see an update, this probably means your version of Android isn\'t supported any more.</string>
	<string name="wallet_version_dialog_button_market">Google Play</string>
	<string name="wallet_version_dialog_button_binary">Download</string>
	<string name="wallet_old_sdk_dialog_title">Android version is out of date</string>
	<string name="wallet_old_sdk_dialog_message">Chances are that one of the next releases of Factoken Wallet will not support your device any more. In some cases, it can get difficult to spend coins on this device.\n\nUnless you know what you are doing, it is recommended to move out your coins soon.</string>
	<string name="send_coins_activity_title">Send Factoken</string>
	<string name="send_coins_fragment_request_payment_request_progress">Fetching signature from %s…</string>
	<string name="send_coins_fragment_request_payment_request_failed_title">Fetching signature failed</string>
	<string name="send_coins_fragment_request_payment_request_wrong_signature">Wrong signature!</string>
	<string name="send_coins_fragment_payee_verified_by">verified by: %s</string>
	<string name="send_coins_fragment_payee_verified_by_unknown">unknown</string>
	<string name="send_coins_fragment_receiving_address_label">Pay to</string>
	<string name="send_coins_fragment_receiving_address_hint">type address or name</string>
	<string name="send_coins_fragment_receiving_address_error">Invalid Factoken Address!</string>
	<string name="send_coins_fragment_receiving_address_complex">complex\naddress</string>
	<string name="send_coins_fragment_pending">(%s waiting for confirmation)</string>
	<string name="send_coins_fragment_amount_label">Amount to pay</string>
    <string name="send_coins_shapeshift_dest_coin_text">Destination coin</string>
    <string name="send_coins_fragment_shapeshift_foreign_label">Amount</string>
    <string name="send_coins_fragment_shapeshift_rate_label">Rate</string>
    <string name="send_coins_fragment_hint_shapeshift_connection_error">Could not connect to ShapeShift.</string>
    <string name="send_coins_fragment_hint_shapeshift_parse_error">Could not understand the ShapeShift response.</string>
    <string name="send_coins_fragment_hint_shapeshift_outside_limits">Factoken amount must be between %1$s and %2$s.</string>
    <string name="send_coins_fragment_hint_shapeshift_too_small">The amount is too small.</string>
    <string name="send_coins_fragment_hint_shapeshift_updating">Updating Information with ShapeShift…</string>
    <string name="send_coins_fragment_hint_shapeshift_future_update">Will update in %s.</string>
    <string name="send_coins_fragment_hint_shapeshift_estimated">The rate and foreign amount is estimated and is not guaranteed.</string>
	<string name="send_coins_fragment_hint_fee">A small network fee of %s will be paid.</string>
	<string name="send_coins_fragment_hint_too_small_output">The amount is too small to send.</string>
	<string name="send_coins_fragment_hint_insufficient_money">short：%s</string>
	<string name="send_coins_fragment_hint_empty_wallet_failed">The amount of tiny payments in your wallet doesn\'t add up to a sendable value.</string>
	<string name="send_coins_fragment_direct_payment_enable">Send payment directly to the payee.</string>
	<string name="send_coins_fragment_direct_payment_ack">Your payment was successfully sent directly.</string>
	<string name="send_coins_fragment_direct_payment_nack">Your payment was rejected via direct connection.</string>
	<string name="send_coins_fragment_direct_payment_failed_title">Direct payment failed</string>
	<string name="send_coins_fragment_direct_payment_failed_msg">Your payment will still be broadcasted via the P2P network.</string>
	<string name="send_coins_fragment_private_key_password">PIN</string>
	<string name="send_coins_fragment_private_key_bad_password">bad PIN!</string>
	<string name="send_coins_fragment_button_send">Send</string>
	<string name="send_coins_fragment_button_back">Back</string>
	<string name="send_coins_fragment_insufficient_money_title">Not enough available coins</string>
	<string name="send_coins_fragment_insufficient_money_msg1">You\'re missing %s.</string>
	<string name="send_coins_fragment_insufficient_money_msg2">Do you want to pay with all you have?</string>
	<string name="send_coins_fragment_empty_wallet_failed_title">Emptying of wallet failed</string>
	<string name="send_coins_fragment_state_decrypting">Decrypting…</string>
    <string name="send_coins_fragment_state_finalise_shapeshift">Shifting…</string>
	<string name="send_coins_preparation_msg">Signing…</string>
	<string name="send_coins_sending_msg">Sending…</string>
	<string name="send_coins_sent_msg">Sent!</string>
	<string name="send_coins_failed_msg">Failed!</string>
	<string name="send_coins_error_msg">Problem sending coins!</string>
	<string name="send_coins_options_empty">Empty wallet</string>
	<string name="send_coins_address_context_clear_title">Enter new address</string>
	<string name="maintenance_dialog_title">Maintenance recommended</string>
	<string name="maintenance_dialog_message">You received %1$s to unsecure addresses. Would you like to move these coins to secure addresses? A small network fee of %2$s will be paid.</string>
	<string name="maintenance_dialog_private_key_password">PIN</string>
	<string name="maintenance_dialog_private_key_bad_password">bad PIN!</string>
	<string name="maintenance_dialog_state_decrypting">Decrypting…</string>
	<string name="maintenance_dialog_state_done">Done.</string>
	<string name="maintenance_dialog_button_move">Move</string>
	<string name="request_coins_activity_title">Request Factoken</string>
	<string name="request_coins_fragment_amount_label">Requested amount (optional)</string>
	<string name="request_coins_fragment_accept_bluetooth_payment">Accept payment via Bluetooth for more reliable processing</string>
	<string name="request_coins_fragment_initiate_request_qr">Have this code scanned by the sender.</string>
	<string name="request_coins_fragment_initiate_request_nfc">Or tap an NFC enabled device.</string>
	<string name="request_coins_clipboard_msg">Factoken request copied to clipboard</string>
	<string name="request_coins_share_dialog_title">Share request for Factoken…</string>
	<string name="request_coins_no_local_app_msg">No other Factoken app found</string>
	<string name="request_coins_options_local_app_title">Request from local app</string>
	<string name="address_book_activity_title">Address Book</string>
	<string name="address_book_list_receiving_title">Your addresses</string>
	<string name="address_book_list_sending_title">Sending addresses</string>
	<string name="address_book_empty_text">No entries in address book</string>
	<string name="address_book_context_send_title">Send Factoken to address</string>
	<string name="address_book_context_edit_title">Edit address</string>
	<string name="address_book_context_remove_title">Remove address</string>
	<string name="address_book_context_copy_to_clipboard_title">Copy to clipboard</string>
	<string name="network_monitor_activity_title">Network monitor</string>
	<string name="import_keys_dialog_title">Restore wallet</string>
	<string name="export_keys_dialog_title">Back up wallet</string>
	<string name="encrypt_keys_dialog_title">Spending PIN</string>
	<string name="preferences_activity_title">Settings</string>
	<string name="button_help">Help</string>
	<string name="button_request_coins">Receive FAC</string>
	<string name="button_send_coins">Send FAC</string>
	<string name="button_scan">Scan</string>
    <string name="button_export">Export</string>
</resources>