<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto" >

	<item
		android:id="@+id/wallet_options_address_book"
		android:icon="@drawable/ic_action_labels"
		android:showAsAction="never"
		android:title="@string/address_book_activity_title"/>
	<item
		android:showAsAction="never"
		android:title="@string/wallet_options_safety_menu">
		<menu>
			<item
				android:id="@+id/wallet_options_safety"
				android:showAsAction="never"
				android:title="@string/wallet_options_safety"/>
			<item
				android:id="@+id/wallet_options_backup_wallet"
				android:showAsAction="never"
				android:title="@string/export_keys_dialog_title"/>
			<item
				android:id="@+id/wallet_options_restore_wallet"
				android:showAsAction="never"
				android:title="@string/import_keys_dialog_title"/>
			<item
				android:id="@+id/wallet_options_encrypt_keys"
				android:showAsAction="never"
				android:title="@string/encrypt_keys_dialog_title"/>
		</menu>
	</item>
    <item
        android:id="@+id/wallet_options_export"
        android:showAsAction="never"
        android:title="@string/button_export"/>
	<item
		android:id="@+id/wallet_options_network_monitor"
		android:showAsAction="never"
		android:title="@string/network_monitor_activity_title"/>
	<item
		android:id="@+id/wallet_options_preferences"
		android:showAsAction="never"
		android:title="@string/preferences_activity_title"/>
	<item
		android:id="@+id/wallet_options_help"
		android:showAsAction="never"
		android:title="@string/button_help"/>

</menu>
