<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical" >

	<RadioGroup
		android:id="@+id/transactions_group"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/tab_bg"
		android:orientation="horizontal"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp"
		android:showDividers="middle"
		android:divider="@drawable/v_line">

		<RadioButton
			android:id="@+id/received"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:button="@null"
			android:layout_weight="1"
			android:gravity="center"
			android:background="@drawable/tab_left_selector"
			android:text="@string/wallet_transactions_fragment_tab_received"
			android:textColor="@drawable/tab_color_selector"
			android:textSize="14sp"
			android:padding="6dp"
			/>

		<RadioButton
			android:id="@+id/all"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:button="@null"
			android:layout_weight="1"
			android:gravity="center"
			android:checked="true"
			android:background="@drawable/tab_middle_selector"
			android:text="@string/wallet_transactions_fragment_tab_all"
			android:textColor="@drawable/tab_color_selector"
			android:textSize="14sp"
			android:padding="6dp"/>

		<RadioButton
			android:id="@+id/sent"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:button="@null"
			android:layout_weight="1"
			android:gravity="center"
			android:background="@drawable/tab_right_selector"
			android:text="@string/wallet_transactions_fragment_tab_sent"
			android:textColor="@drawable/tab_color_selector"
			android:textSize="14sp"
			android:padding="6dp"/>

	</RadioGroup>

	<android.support.v4.view.ViewPager
		android:id="@+id/transactions_pager"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|center_horizontal"
		android:background="@color/bg_bright" />

</LinearLayout>